[package]
name = "rust-media-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = { version = "0.27", features = ["glow"] }
egui_extras = { version = "0.27", features = ["image"] }
# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
# CSV export
csv = "1.3"
# Image loading (optional, for preview icons)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Utilities
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
simplelog = "0.12"

# File dialogs (optional lightweight)
rfd = "0.14"

[profile.release]
opt-level = 3
